--- a/app/templates/index.j2
+++ b/app/templates/index.j2
@@ -6,22 +6,38 @@
     <title>Test JSON Table</title>
 </head>
 <body>
-    <h1>Test JSON Table</h1>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Service</th>
-                <th>Version</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for service, version in data.items() %}
-            <tr>
-                <td>{{ service }}</td>
-                <td>{{ version }}</td>
-            </tr>
+    <header>
+        <h1>Test JSON Table</h1>
+        <div>
+            {% for host_file in hosts_files %}
+                <form action="/" method="get">
+                    <input type="hidden" name="host" value="{{ host_file }}">
+                    <button type="submit">{{ host_file }}</button>
+                </form>
             {% endfor %}
-        </tbody>
-    </table>
+        </div>
+    </header>
+    <main>
+        {% if data %}
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>Service</th>
+                        <th>Version</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for service, version in data.items() %}
+                        <tr>
+                            <td>{{ service }}</td>
+                            <td>{{ version }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <p>No info about host</p>
+        {% endif %}
+    </main>
 </body>
 </html>
