restructurization, added basic style.css props, button fixed to the navbar

--- a/app/templates/index.j2
+++ b/app/templates/index.j2
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test JSON Table</title>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}"/>
 </head>
 <body>
-    <header>
-        <h1>Test JSON Table</h1>
-        <div>
+    <nav>
+        <div class="nav-buttons">
+            <h2>Welcome to the Test JSON Table App!</h2>
+            <p>Choose a host:</p>
+
             {% for host_file in hosts_files %}
-                <form action="/" method="get">
+                <form action="/index" method="get">
                     <input type="hidden" name="host" value="{{ host_file }}">
                     <button type="submit">{{ host_file }}</button>
                 </form>
             {% endfor %}
         </div>
+    </nav>
+    <header>
+        <h1>Test JSON Table</h1>
     </header>
     <main>
         {% if data %}
