--- a/app/frontend/static/styles/style.css
+++ b/app/frontend/static/styles/style.css
@@ -1,9 +1,84 @@
+body {
+    margin: 0;
+    padding: 20px;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+.nav-button button {
+    border: none;
+}
 .nav-buttons {
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    gap: 20px;
 }
 
-.nav-buttons form {
-    margin-right: 10px;
-    margin-bottom: 10px;
+.nav-buttons div:first-child {
+    flex-grow: 1;
+}
+
+.nav-buttons .nav-button {
+    margin: 0;
+    padding: 10px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    background-color: #f0f0f0;
+    box-shadow: 0 0 10px rgba(0,0,0,0.15);
+}
+
+.small-text {
+    font-size: 10px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    text-align: center;
+    margin-top: 20px;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+th {
+    background-color: #4CAF50;
+    color: white;
+}
+
+td:first-child {
+    text-align: left;
+    padding-left: 20px;
+}
+
+td:nth-child(2) {
+    text-align: center;
+}
+
+#loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(255, 255, 255, .8);
+}
+
+#loading img {
+    width: 50px; /* Adjust as needed */
+    height: 50px; /* Adjust as needed */
+}
+
+body > *:not(#loading):not(table):not(th) {
+    display: none;
+}
+
+.hide {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 }
