--- a/app/templates/fallback.j2
+++ b/app/templates/fallback.j2
@@ -17,6 +17,7 @@
     <h1>Selected host file: {{ selected_host }}</h1>
     <div class="version-info">
         <a href="{{ url_for('upload') }}" class="button">Upload</a>
+        <a href="{{ url_for('update') }}" class="button">Fetch</a>
         <h2>VersionChecker</h2>
   
     </div>
